# wc2026_predictor_final

./: .env.example  .flake8  .gitignore  README.md  combine_rankings.py  debug.wikitext  debug_age_param.py  debug_wikitext.py  pyproject.toml  requirements.txt  validate_setup.py
config/: config.yaml
scripts/squads/: 01_scrape_wikipedia_squads.py  02_fetch_transfermarkt_kaggle.py  03_merge_and_match.py  run_all.py
src/: __init__.py
src/data/: download.py  preprocess.py  squads.py  team_names.py  validate_raw.py
src/features/: build_features.py  elo.py  form.py  squad_features.py
src/models/: __init__.py  base.py  dixon_coles.py  ensemble.py  evaluate.py  outcome_models.py  train.py  validate.py  walk_forward.py
src/simulation/: __init__.py  match_simulator.py  player_models.py  results_aggregator.py  run_simulation.py  tournament_format.py  tournament_simulator.py
src/utils/: __init__.py  helpers.py  logger.py
tests/: test_features.py  test_models.py  test_simulation.py  test_utils.py
